@@ -100,6 +100,16 @@ div.information {  font-size:14px; font-weight:bold;}
 
 /* POSITION */
 
+div#pictureTitle {
+  float:left;
+  text-align:left;
+}
+
+div#pictureNumber {
+  float:right;
+  text-align:right;
+}
+
 #gauche,#droite
 {
   float:left;
